draw(): Do not UMLWidget::setPen(p) because that uses the WidgetBase::m_LineWidth. This is the actual fix for the bug at hand. But while at it, I made further fixes: UMLWidget::m_bResizable: Set true unconditionally. constrain(): New. Override virtual method of UMLWidget for better resize behavior. Activity_Type, Fork_DEPRECATED: Remove.

BUG:146925

svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=677222